[package]
name = "compass-extension"
version = "0.1.0"
edition = "2024"

[lib]
name = "compass_extension"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.100"
coarsetime = "0.1.36"
phper = "0.17.1"
probe = "0.5.2"
once_cell = "1.21.3"
nix = "0.30.1"
chrono = "0.4.42"
tracing = "0.1.41"
rustc-hash = "2.1.1"
cached = "0.56"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
